<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DMMainScreenActivity"
    android:background="@drawable/mainscreen">

    <Button
        android:id="@+id/PartyMembers"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/party_members"
        android:textAlignment="center"
        android:textColor="#fff" />

    <Button
        android:id="@+id/Items"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="172dp"
        android:background="@android:color/transparent"
        android:text="@string/items"
        android:textAlignment="center"
        android:textColor="#fff" />


    <Button
        android:id="@+id/Monsters"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="329dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/monsters"
        android:textAlignment="center"
        android:textColor="#fff" />

    <Button
        android:id="@+id/Rules"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="646dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/rules"
        android:textAlignment="center"

        android:textColor="#fff" />

    <Button
        android:id="@+id/Notes"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="804dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textColor="#fff" />

    <Button
        android:id="@+id/NPC"
        android:layout_width="159dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="489dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/npcs"
        android:textAlignment="center"
        android:textColor="#fff" />

</RelativeLayout>